src/test/ui/issues/issue-39970.stderr
warning: the where-clause bound `for<'a> <() as Array<'a>>::Element == ()` is impossible to satisfy
  --> $DIR/issue-39970.rs:15:5
   |
LL | / impl Visit for () where
LL | |     //(): for<'a> Array<'a, Element=&'a ()>, // No ICE
LL | |     (): for<'a> Array<'a, Element=()>, // ICE
   | |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | |
LL | | {}
   | |__- this item cannot be referenced without causing an error
   |
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to allow it

error[E0271]: type mismatch resolving `for<'a> <() as Array<'a>>::Element == ()`
  --> $DIR/issue-39970.rs:20:5
   |
LL |     <() as Visit>::visit();
   |     ^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `for<'a> <() as Array<'a>>::Element == ()`
   |
note: expected this to be `()`
  --> $DIR/issue-39970.rs:10:20
   |
LL |     type Element = &'a ();
   |                    ^^^^^^
note: required because of the requirements on the impl of `Visit` for `()`
  --> $DIR/issue-39970.rs:13:6
   |
LL | impl Visit for () where
   |      ^^^^^     ^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0271`.
